# python-project-johannes

./: .flake8  .gitignore  .trivyignore  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  api-documentation.html  explanation.html  how-to-guides.html  index.html  main.py  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  reference.html  sitemap.xml  techstack.md  techstack.yml  tutorials.html
.github/workflows/: actions_vars.yml  build.yml  build_and_push.yml  lint.yml  orchestrator.yml  pages.yml  release.yml  semantic_pull_request.yml  test.yml
docs/: api-documentation.md  explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
scripts/: create_openapi_json.py
search/: search_index.json
src/example_app/: app.py  service.py
tests/: test_app.py
