[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Johannes Schmidt <johannes.schmidt.vik@gmail.com>"]
readme = "README.md"
packages = [{include = "example_app"}]
homepage = "https://github.com/johschmidt42/python-project-johannes"
repository = "https://github.com/johschmidt42/python-project-johannes"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
