[tool.poetry]
name = "example_app"
version = "0.4.1"
description = ""
authors = ["Johannes Schmidt <johannes.schmidt.vik@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/johschmidt42/python-project-johannes"
repository = "https://github.com/johschmidt42/python-project-johannes"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"
pytest-cov = "^4.0.0"
respx = "^0.20.0"
pytest-asyncio = "^0.19.0"
trio = "^0.22.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.12"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-render-swagger-plugin = "^0.0.4"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^7.32.2"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":'
]

[tool.semantic_release]
branch = "main"
version_variable = "src/example_app/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_message = "{version} [skip ci]" # skip triggering ci pipelines for version commits
tag_commit = true
upload_to_pypi = false
upload_to_release = false
hvcs = "github" # gitlab is also supported (hvcs = host version control system)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
